@@ -1,29 +1,37 @@
-
-Postbus 657
-2900 AR
-CAPELLE AAN DEN IJSSEL
+-ea
+-server
 -Xms16g
 -Xmx16g
 -Xss64m
 -XX:PermSize=1024m
 -XX:MaxPermSize=4g
--XX:+CMSClassUnloadingEnabled
--XX:+UseParallelGC
--XX:AggressiveOpts
--XX:UseFastAccessorMethods
--XX:MaxGCPauseMillis=200
--XX:ParallelGCThreads=20
+-XX:+DoEscapeAnalysis
+-XX:+UseCompressedOops
+-XX:+UnlockExperimentalVMOptions
 -XX:+UseConcMarkSweepGC
--XX:+UseParNewGC
--XX:SurvivorRatio=8
--XX:TargetSurvivorRatio=90
--XX:MaxTenuringThreshold=31
--XX:+UseBiasedLocking
+-XX:LargePageSizeInBytes=256m
+-XX:ReservedCodeCacheSize=96m
+-XX:+UseCodeCacheFlushing
+-XX:+UseCompressedOops
 -XX:ParallelGCThreads=8
 -XX:+UseParNewGC
 -XX:+UseConcMarkSweepGC
 -XX:+DisableExplicitGC
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+PrintGCDetails
--XX:+UnlockExperimentalVMOptions
--XX:+UseConcMarkSweepGC
+-XX:+PrintFlagsFinal
+-XX:+AggressiveOpts
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSPermGenSweepingEnabled
+-XX:CMSInitiatingOccupancyFraction=60
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSParallelRemarkEnabled
+-XX:+UseAdaptiveGCBoundary
+-XX:+UseSplitVerifier
+-XX:CompileThreshold=10000
+-XX:+UseCompressedStrings
+-XX:+OptimizeStringConcat
+-XX:+UseStringCache
+-XX:+UseFastAccessorMethods
+-XX:+UnlockDiagnosticVMOptions
